check_variants.txt
    Checking lume-vulkan v0.1.0 (G:\Document-5\LumeVisual\LumeVisual\lume-vulkan)
error[E0422]: cannot find struct, variant or union type `AllocationSizes` in this scope
   --> lume-vulkan\src\instance.rs:235:36
    |
235 |             allocation_sizes: Some(AllocationSizes {
    |                                    ^^^^^^^^^^^^^^^
    |
   ::: G:\WinApplication\rust\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\gpu-allocator-0.27.0\src\vulkan\mod.rs:151:1
    |
151 | pub struct Allocation {
    | --------------------- similarly named struct `Allocation` defined here
    |
help: a struct with a similar name exists
    |
235 -             allocation_sizes: Some(AllocationSizes {
235 +             allocation_sizes: Some(Allocation {
    |
help: consider importing this struct
    |
1   + use gpu_allocator::AllocationSizes;
    |

warning: unused import: `Entry`
 --> lume-vulkan\src\instance.rs:1:15
  |
1 | use ash::{vk, Entry};
  |               ^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `CString`
 --> lume-vulkan\src\instance.rs:4:22
  |
4 | use std::ffi::{CStr, CString};
  |                      ^^^^^^^

warning: unused imports: `error` and `warn`
 --> lume-vulkan\src\instance.rs:5:17
  |
5 | use log::{info, error, warn};
  |                 ^^^^^  ^^^^

warning: unused import: `error`
 --> lume-vulkan\src\device.rs:2:17
  |
2 | use log::{info, error};
  |                 ^^^^^

warning: unused import: `error`
 --> lume-vulkan\src\swapchain.rs:2:17
  |
2 | use log::{info, error};
  |                 ^^^^^

error[E0599]: no variant or associated item named `LIST_VARIANTS` found for enum `gpu_allocator::vulkan::AllocationScheme` in the current scope
   --> lume-vulkan\src\device.rs:559:73
    |
559 |             allocation_scheme: gpu_allocator::vulkan::AllocationScheme::LIST_VARIANTS,
    |                                                                         ^^^^^^^^^^^^^ variant or associated item not found in `gpu_allocator::vulkan::AllocationScheme`

error[E0599]: no variant or associated item named `LIST_VARIANTS` found for enum `gpu_allocator::vulkan::AllocationScheme` in the current scope
   --> lume-vulkan\src\device.rs:739:73
    |
739 |             allocation_scheme: gpu_allocator::vulkan::AllocationScheme::LIST_VARIANTS,
    |                                                                         ^^^^^^^^^^^^^ variant or associated item not found in `gpu_allocator::vulkan::AllocationScheme`

warning: unused import: `HasWindowHandle`
 --> lume-vulkan\src\instance.rs:3:43
  |
3 | use raw_window_handle::{HasDisplayHandle, HasWindowHandle};
  |                                           ^^^^^^^^^^^^^^^

warning: unused import: `HasDisplayHandle`
 --> lume-vulkan\src\instance.rs:3:25
  |
3 | use raw_window_handle::{HasDisplayHandle, HasWindowHandle};
  |                         ^^^^^^^^^^^^^^^^

warning: unused variable: `descriptor`
   --> lume-vulkan\src\device.rs:758:60
    |
758 | ...texture: &Self::Texture, descriptor: lume_core::device::TextureViewDescriptor) -> LumeResult<Self::TextureView> {
    |                             ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_descriptor`
    |
    = note: `#[warn(unused_variables)]` on by default

Some errors have detailed explanations: E0422, E0599.
For more information about an error, try `rustc --explain E0422`.
warning: `lume-vulkan` (lib) generated 8 warnings
error: could not compile `lume-vulkan` (lib) due to 3 previous errors; 8 warnings emitted
